--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 body{
     background-color: rgba(45, 56, 64, 0.775);
-    background-image: url(../NewBee/Images/_.jpeg);
+    background-image: url(../Images/_.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
